fix: webkit 100vh on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,12 +14,14 @@
 
   html {
     @apply text-base;
+    height: fill-available;
   }
 
   body {
     @apply min-h-screen p-2;
     @apply text-gray-900 bg-gray-450;
     @apply font-sans antialiased leading-none uppercase;
+    min-height: fill-available;
     text-rendering: optimizeLegibility;
   }
 
